# math_calculator

./: .gitignore  manage.py  pytest.ini  requirements-dev.txt  requirements.txt
django-mathinput/: .gitignore  CHANGELOG.md  GITHUB_RELEASE_NOTES_1.0.0.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.0rc1.md  RUN_TESTS.md  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  test_security_quick.py
django-mathinput/mathinput/: __init__.py  admin.py  apps.py  security.py  validators.py  widgets.py
django-mathinput/mathinput/modes/: __init__.py  advanced_expressions.py  integrals_differentials.py  matrices.py  physics_engineering.py  regular_functions.py  statistics_probability.py
django-mathinput/mathinput/presets/: __init__.py  algebra.py  calculus.py  machine_learning.py  physics.py  probability.py  statistics.py
django-mathinput/mathinput/templates/mathinput/: quick_insert.html  toolbar_advanced.html  toolbar_basic.html  toolbar_calculus.html  toolbar_matrices.html  toolbar_symbols.html  toolbar_text.html  toolbar_trig.html  widget.html
django-mathinput/mathinput/templatetags/: __init__.py  mathinput_tags.py
django-mathinput/tests/: FRONTEND_TESTING.md  TEST_STATUS.md  __init__.py  conftest.py  jest.setup.js  settings.py  test_admin_integration.py  test_compatibility.py  test_comprehensive.py  test_frontend_phase2.js  test_frontend_phase3.js  test_frontend_phase4.js  test_frontend_phase5.js  test_integration_phase1.py  test_integration_phase2.py  test_integration_phase3.py  test_integration_phase4.py  test_integration_phase5.py  test_modes.py  test_performance.py  test_presets.py  test_production_integration.py  test_quick_insert.py  test_release.py  test_security_basic.py  test_security_phase1.py  test_security_phase2.py  test_security_phase3.py  test_security_phase4.py  test_security_phase5.py  test_template_tags.py  test_text_formatting.py  test_unit_phase5.py  test_user_stories_complete.py  test_user_stories_phase1.py  test_user_stories_phase2.py  test_user_stories_phase3.py  test_user_stories_phase4.py  test_validators_basic.py  test_widgets_basic.py  (+2 more)
django-mathinput/tests/coverage/: clover.xml
docs/: API_DOCUMENTATION.md  (+14 more)
(+7 files in other folders)
