[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "frontend: Frontend/JavaScript tests",
    "security: Security tests",
    "user_story: User story tests",
    "us_01: User story 1 - Insert Fraction",
    "us_02: User story 2 - Insert Integral",
    "us_03: User story 3 - Insert Matrix",
    "us_04: User story 4 - Switch Visual/Source Modes",
    "us_05: User story 5 - Quick Insert Templates",
    "us_06: User story 6 - Text Formatting",
    "us_07: User story 7 - Switch Input Modes",
    "us_08: User story 8 - Use Domain Presets",
    "us_09: User story 9 - Edit Existing Formula",
    "us_10: User story 10 - Copy and Paste",
    "us_11: User story 11 - Undo and Redo",
    "us_12: User story 12 - Multi-line Equations",
    "us_13: User story 13 - Mobile Usage",
    "us_14: User story 14 - Keyboard Navigation",
    "us_15: User story 15 - Error Handling",
    "us_16: User story 16 - Display Stored Formulas",
    "performance: Performance tests",
    "compatibility: Compatibility tests",
    "release: Release tests",
]

[tool.coverage.run]
source = ["mathinput"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

